[package]
name = "tf2up"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "libloaderapi", "processthreadsapi", "winuser", "handleapi", "wincon", "memoryapi", "d3d9"] }

[dependencies]
lazy_static = "1.4.0"
paste = "1.0.9"
egui = "0.16.0"